# promin

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: copilot-instructions.md
examples/: autograd.py  bptree.py  bst.py  container_and_links_layout.py  parser.py  parser_viz.py  rbtree.py  stack.py  tokenizer.py
src/promin/: __init__.py  render.py  trace.py  view.py
src/promin/layout/: __init__.py  adapters.py  builtins.py  types.py
src/promin/render/: __init__.py  geometry.py  layout_engine.py  layout_registry.py  mobjects.py  runtime.py  scene.py  snapshot_view.py  types.py
src/promin/tracing/: __init__.py  registry.py  trace.py
src/promin/view/: __init__.py  dsl.py  runtime.py  serialize.py  specs.py
tests/: test_container_layout_effects.py  test_layout_registry.py  test_register_type_layout_required.py  test_render_container_detection.py  test_render_edge_anchor.py  test_render_layout_plugins.py  test_render_list_layout.py  test_render_node_style.py  test_render_output_path.py  test_render_states_output.py  test_render_tree_no_overlap.py  test_snapshot_builtin_types.py  test_view_dispatch.py
